--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -4,6 +4,7 @@
 
 body {
   overflow: hidden;
+  background-color: black;
 }
 
 .container {
@@ -17,35 +18,79 @@ body {
   }
   
   .green-scanner {
-    width: 90vw;
-    height: calc(90vw/2);
-    border-top-left-radius: 45vw;
-    border-top-right-radius: 45vw;
+    width: 80vw;
+    height: calc(80vw/2);
+    border-top-left-radius: 40vw;
+    border-top-right-radius: 40vw;
     transform-origin: bottom center;
     background: radial-gradient(circle at 50% 100%, #00ff0055, #00ff00);
-    animation: scan 4s infinite linear;
     position: absolute;
     bottom: 0;
   }
 
-  .canvas-radar {
-    width: 90vw;
-    height: calc(90vw/2);
-    position: absolute;
-    height: calc(90vw/2);
-    pointer-events: none;
-    bottom: 0;
+  .outer-circle {
+    width: 85vw;
+    height: calc(85vw/2);
     border-top-left-radius: 45vw;
     border-top-right-radius: 45vw;
+    position: absolute;
+    bottom: 0;
+    box-shadow: 0 0 50px 0 #00ff0055;
+
   }
+
+  .outer-circle:before,
+  .outer-circle:after {
+    content: "";
+    width: 85vw;
+    height: calc(85vw/2);
+    border-top-left-radius: 45vw;
+    border-top-right-radius: 45vw;
+    position: absolute;
+    border: 1px solid #0ce60c;
+    box-shadow: 0 0 20px 0 #00ff0055;
+
+  }
+
+
+.ripple:before {
+  animation: ripple 2s infinite linear;
+}
+
+.ripple:after {
+  animation: ripple 2s infinite linear;
+  animation-delay: 1s;
+}
+
+@keyframes ripple {
+  0% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(3.5);
+  }
+}
+
+
+  .canvas-radar {
+    width: 80vw;
+    height: calc(80vw/2);
+    position: absolute;
+    height: calc(80vw/2);
+    pointer-events: none;
+    bottom: 0;
+    border-top-left-radius: 40vw;
+    border-top-right-radius: 40vw;
+  }
+
 
   .line {
     position: absolute;
     bottom: 0;
     transform-origin: bottom center;
     width: 3px;
-    height: calc(90vw/2);
-    background-color: red;
+    height: calc(80vw/2);
+    background: linear-gradient(to bottom, rgba(196, 254, 196), rgba(0, 100, 0, 0));
     transition: transform 0.5s ease;
   }
 
@@ -64,10 +109,12 @@ body {
     border-color: black;
     transition: all 0.3s ease;
     cursor: pointer;
+    z-index: 10;
   }
 
   .connect:hover {
     font-size: large;
+    transform: scale(1.1);
   }
   
   .connect:active {
